feat: 紐⑷퉴?쒗븳??MVP - ?곸꽭?섏씠吏, ?λ컮援щ땲, 紐⑤컮??理쒖쟻??

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="description" content="목까시한우 - 최상급 한우의 기준이 되다. 프리미엄 1++ 한우 전문점">
     <title>목까시한우 | 한우의 기준이 되다</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -63,7 +63,7 @@
             <div class="hero-slider">
                 <div class="hero-slide active">
                     <div class="hero-bg">
-                        <img src="https://images.unsplash.com/photo-1558030006-450675393462?auto=format&fit=crop&w=1920&q=80" alt="프리미엄 한우">
+                        <img src="https://images.unsplash.com/photo-1666013942642-b7b54ecafd7d?auto=format&fit=crop&w=1920&q=80" alt="프리미엄 한우">
                         <div class="hero-overlay"></div>
                     </div>
                     <div class="hero-content">
@@ -78,7 +78,7 @@
                 </div>
                 <div class="hero-slide">
                     <div class="hero-bg">
-                        <img src="https://images.unsplash.com/photo-1603048297172-c92544798d5a?auto=format&fit=crop&w=1920&q=80" alt="선물세트">
+                        <img src="https://images.unsplash.com/photo-1625643269470-5d3e7b69fa34?auto=format&fit=crop&w=1920&q=80" alt="선물세트">
                         <div class="hero-overlay"></div>
                     </div>
                     <div class="hero-content">
@@ -93,7 +93,7 @@
                 </div>
                 <div class="hero-slide">
                     <div class="hero-bg">
-                        <img src="https://images.unsplash.com/photo-1544025162-d76694265947?auto=format&fit=crop&w=1920&q=80" alt="기업구매">
+                        <img src="https://images.unsplash.com/photo-1763140446057-9becaa30b868?auto=format&fit=crop&w=1920&q=80" alt="기업구매">
                         <div class="hero-overlay"></div>
                     </div>
                     <div class="hero-content">
@@ -147,7 +147,7 @@
                     <article class="product-card">
                         <a href="product-detail.html?id=1" class="product-link">
                             <div class="product-image">
-                                <img src="https://images.unsplash.com/photo-1615937657715-bc7b4b7962c1?auto=format&fit=crop&w=600&q=80" alt="1++ 한우 등심">
+                                <img src="https://images.unsplash.com/photo-1666013942642-b7b54ecafd7d?auto=format&fit=crop&w=600&q=80" alt="1++ 한우 등심">
                                 <span class="product-badge best">BEST</span>
                             </div>
                             <div class="product-info">
@@ -163,7 +163,7 @@
                     <article class="product-card">
                         <a href="product-detail.html?id=2" class="product-link">
                             <div class="product-image">
-                                <img src="https://images.unsplash.com/photo-1588168333986-5078d3ae3976?auto=format&fit=crop&w=600&q=80" alt="1++ 한우 채끝">
+                                <img src="https://images.unsplash.com/photo-1690983321239-775be3a0347d?auto=format&fit=crop&w=600&q=80" alt="1++ 한우 채끝">
                                 <span class="product-badge new">NEW</span>
                             </div>
                             <div class="product-info">
@@ -179,7 +179,7 @@
                     <article class="product-card">
                         <a href="product-detail.html?id=3" class="product-link">
                             <div class="product-image">
-                                <img src="https://images.unsplash.com/photo-1602470520998-f4a52199a3d6?auto=format&fit=crop&w=600&q=80" alt="1++ 한우 안심">
+                                <img src="https://images.unsplash.com/photo-1613454320437-0c228c8b1723?auto=format&fit=crop&w=600&q=80" alt="1++ 한우 안심">
                             </div>
                             <div class="product-info">
                                 <h3 class="product-name">1++ 한우 안심 (스테이크용)</h3>
@@ -193,7 +193,7 @@
                     <article class="product-card">
                         <a href="product-detail.html?id=4" class="product-link">
                             <div class="product-image">
-                                <img src="https://images.unsplash.com/photo-1529692236671-f1f6cf9683ba?auto=format&fit=crop&w=600&q=80" alt="1++ 한우 꽃갈비">
+                                <img src="https://images.unsplash.com/photo-1448907503123-67254d59ca4f?auto=format&fit=crop&w=600&q=80" alt="1++ 한우 꽃갈비">
                                 <span class="product-badge sale">10%</span>
                             </div>
                             <div class="product-info">
@@ -281,7 +281,7 @@
                     <article class="gift-card">
                         <a href="gift-detail.html?id=1" class="gift-link">
                             <div class="gift-image">
-                                <img src="https://images.unsplash.com/photo-1607623814075-e51df1bdc82f?auto=format&fit=crop&w=800&q=80" alt="프리미엄 한우 세트">
+                                <img src="https://images.unsplash.com/photo-1666013942642-b7b54ecafd7d?auto=format&fit=crop&w=800&q=80" alt="프리미엄 한우 세트">
                             </div>
                             <div class="gift-info">
                                 <span class="gift-tag">명절 추천</span>
@@ -294,7 +294,7 @@
                     <article class="gift-card">
                         <a href="gift-detail.html?id=2" class="gift-link">
                             <div class="gift-image">
-                                <img src="https://images.unsplash.com/photo-1551028150-64b9f398f678?auto=format&fit=crop&w=800&q=80" alt="스페셜 등심 세트">
+                                <img src="https://images.unsplash.com/photo-1690983321239-775be3a0347d?auto=format&fit=crop&w=800&q=80" alt="스페셜 등심 세트">
                             </div>
                             <div class="gift-info">
                                 <span class="gift-tag">베스트</span>
@@ -307,7 +307,7 @@
                     <article class="gift-card">
                         <a href="gift-detail.html?id=3" class="gift-link">
                             <div class="gift-image">
-                                <img src="https://images.unsplash.com/photo-1560781290-7dc94c0f8f4f?auto=format&fit=crop&w=800&q=80" alt="VIP 종합 선물세트">
+                                <img src="https://images.unsplash.com/photo-1625643269470-5d3e7b69fa34?auto=format&fit=crop&w=800&q=80" alt="VIP 종합 선물세트">
                             </div>
                             <div class="gift-info">
                                 <span class="gift-tag">VIP</span>
@@ -324,7 +324,7 @@
         <!-- 소개 섹션 -->
         <section id="about" class="about-section">
             <div class="about-bg">
-                <img src="https://images.unsplash.com/photo-1504973960431-1c467e159aa4?auto=format&fit=crop&w=1920&q=80" alt="목까시한우">
+                <img src="https://images.unsplash.com/photo-1763140446057-9becaa30b868?auto=format&fit=crop&w=1920&q=80" alt="목까시한우">
                 <div class="about-overlay"></div>
             </div>
             <div class="container">
@@ -358,7 +358,7 @@
                     <article class="magazine-card large">
                         <a href="magazine-detail.html?id=1" class="magazine-link">
                             <div class="magazine-image">
-                                <img src="https://images.unsplash.com/photo-1546833998-877b37c2e5c6?auto=format&fit=crop&w=1200&q=80" alt="안심의 숨겨진 매력">
+                                <img src="https://images.unsplash.com/photo-1613454320437-0c228c8b1723?auto=format&fit=crop&w=1200&q=80" alt="안심의 숨겨진 매력">
                             </div>
                             <div class="magazine-content">
                                 <span class="magazine-category">MEAT GUIDE</span>
@@ -370,7 +370,7 @@
                     <article class="magazine-card">
                         <a href="magazine-detail.html?id=2" class="magazine-link">
                             <div class="magazine-image">
-                                <img src="https://images.unsplash.com/photo-1432139555190-58524dae6a55?auto=format&fit=crop&w=600&q=80" alt="셰프 인터뷰">
+                                <img src="https://images.unsplash.com/photo-1666013942642-b7b54ecafd7d?auto=format&fit=crop&w=600&q=80" alt="셰프 인터뷰">
                             </div>
                             <div class="magazine-content">
                                 <span class="magazine-category">INTERVIEW</span>
@@ -381,7 +381,7 @@
                     <article class="magazine-card">
                         <a href="magazine-detail.html?id=3" class="magazine-link">
                             <div class="magazine-image">
-                                <img src="https://images.unsplash.com/photo-1594041680534-e8c8cdebd659?auto=format&fit=crop&w=600&q=80" alt="갈비 채끝편">
+                                <img src="https://images.unsplash.com/photo-1448907503123-67254d59ca4f?auto=format&fit=crop&w=600&q=80" alt="갈비 채끝편">
                             </div>
                             <div class="magazine-content">
                                 <span class="magazine-category">MEAT GUIDE</span>
@@ -392,7 +392,7 @@
                     <article class="magazine-card">
                         <a href="magazine-detail.html?id=4" class="magazine-link">
                             <div class="magazine-image">
-                                <img src="https://images.unsplash.com/photo-1558030137-a56c1b004fa3?auto=format&fit=crop&w=600&q=80" alt="등심 편">
+                                <img src="https://images.unsplash.com/photo-1690983321239-775be3a0347d?auto=format&fit=crop&w=600&q=80" alt="등심 편">
                             </div>
                             <div class="magazine-content">
                                 <span class="magazine-category">MEAT GUIDE</span>
