--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <meta name="description" content="목까시한우 - 최상급 한우의 기준이 되다. 프리미엄 1++ 한우 전문점">
-    <title>목까시한우 | 한우의 기준이 되다</title>
+    <meta name="description" content="MOK'S BUTCHER - 최상급 한우의 기준이 되다. 프리미엄 1++ 한우 전문점">
+    <title>MOK'S BUTCHER | 한우의 기준이 되다</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;600;700;900&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="header-inner">
             <a href="index.html" class="logo">
-                <span class="logo-text">목까시한우</span>
+                <span class="logo-text">MOK'S BUTCHER</span>
             </a>
             <nav class="nav">
                 <ul class="nav-list">
@@ -70,7 +70,7 @@
                         <p class="hero-subtitle">PREMIUM KOREAN BEEF</p>
                         <h1 class="hero-title">
                             <span class="title-line">차이를 안다면,</span>
-                            <span class="title-line">한우는 <em>목까시</em></span>
+                            <span class="title-line">한우는 <em>MOK'S</em></span>
                         </h1>
                         <p class="hero-desc">최상급 1++ 한우만을 엄선하여<br>당신의 식탁에 특별함을 선사합니다</p>
                         <a href="#products" class="btn-hero">상품 보러가기</a>
@@ -126,7 +126,7 @@
                         한우의 기준이 되다
                     </h2>
                     <p class="brand-intro-desc">
-                        목까시한우는 1++ 최상급 한우만을 엄선하여<br>
+                        MOK'S BUTCHER는 1++ 최상급 한우만을 엄선하여<br>
                         진정한 한우의 맛과 품격을 전달합니다.
                     </p>
                 </div>
@@ -324,14 +324,14 @@
         <!-- 소개 섹션 -->
         <section id="about" class="about-section">
             <div class="about-bg">
-                <img src="https://images.unsplash.com/photo-1763140446057-9becaa30b868?auto=format&fit=crop&w=1920&q=80" alt="목까시한우">
+                <img src="https://images.unsplash.com/photo-1763140446057-9becaa30b868?auto=format&fit=crop&w=1920&q=80" alt="MOK'S BUTCHER">
                 <div class="about-overlay"></div>
             </div>
             <div class="container">
                 <div class="about-content">
-                    <p class="about-subtitle">WHY MOKKASI</p>
+                    <p class="about-subtitle">WHY MOK'S</p>
                     <h2 class="about-title">
-                        목까시한우가<br>특별한 이유
+                        MOK'S BUTCHER가<br>특별한 이유
                     </h2>
                     <p class="about-desc">
                         1++ 최상급 한우만을 엄선하여<br>
@@ -350,7 +350,7 @@
                 <div class="section-header">
                     <div class="section-header-text">
                         <p class="section-subtitle">MAGAZINE</p>
-                        <h2 class="section-title">목까시 매거진</h2>
+                        <h2 class="section-title">MOK'S 매거진</h2>
                     </div>
                     <a href="index.html#magazine" class="link-more">전체보기</a>
                 </div>
@@ -434,7 +434,7 @@
             <div class="footer-main">
                 <div class="footer-info">
                     <div class="footer-logo">
-                        <span class="logo-text">목까시한우</span>
+                        <span class="logo-text">MOK'S BUTCHER</span>
                     </div>
                     <div class="footer-contact">
                         <p class="contact-label">고객센터</p>
@@ -475,17 +475,17 @@
             </div>
             <div class="footer-bottom">
                 <div class="company-info">
-                    <p><strong>목까시한우 (주)</strong></p>
+                    <p><strong>MOK'S BUTCHER (주)</strong></p>
                     <p>대표자 홍길동 | 개인정보 관리 책임자 김철수</p>
-                    <p>사업자 등록번호 000-00-00000 | 통신판매업 신고번호 2024-서울강남-0000</p>
-                    <p>서울특별시 강남구 테헤란로 123 목까시빌딩</p>
+                    <p>사업자 등록번호 000-00-00000 | 통신판매업 신고번호 2026-서울강남-0000</p>
+                    <p>서울특별시 강남구 테헤란로 123 MOK'S BUTCHER 빌딩</p>
                 </div>
                 <div class="footer-legal">
                     <a href="#">이용약관</a>
                     <a href="#">개인정보처리방침</a>
                     <a href="#">제휴 문의</a>
                 </div>
-                <p class="copyright">© 2024 목까시한우. All rights reserved.</p>
+                <p class="copyright">© 2026 MOK'S BUTCHER. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -499,14 +499,14 @@
             </svg>
             <span>홈</span>
         </a>
-        <a href="#products" class="nav-item">
+        <a href="index.html#products" class="nav-item">
             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                 <circle cx="11" cy="11" r="8"></circle>
                 <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
             </svg>
             <span>탐색</span>
         </a>
-        <a href="#gift" class="nav-item">
+        <a href="index.html#gift" class="nav-item">
             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                 <polyline points="20 12 20 22 4 22 4 12"></polyline>
                 <rect x="2" y="7" width="20" height="5"></rect>
@@ -526,5 +526,6 @@
     </nav>
 
     <script src="main.js"></script>
+    <script src="chat-widget.js"></script>
 </body>
 </html>
