--- a/gift-detail.html
+++ b/gift-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>선물세트 상세 | 목까시한우</title>
+    <title>선물세트 상세 | MOK'S BUTCHER</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;600;700;900&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
     <header class="header scrolled">
         <div class="header-inner">
-            <a href="index.html" class="logo"><span class="logo-text">목까시한우</span></a>
+            <a href="index.html" class="logo"><span class="logo-text">MOK'S BUTCHER</span></a>
             <nav class="nav">
                 <ul class="nav-list">
                     <li><a href="index.html#products">상품</a></li>
@@ -53,20 +53,26 @@
     <footer class="footer footer-compact">
         <div class="container">
             <p class="contact-number">1644-0000</p>
-            <p class="copyright">© 2024 목까시한우. All rights reserved.</p>
+            <p class="copyright">© 2026 MOK'S BUTCHER. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="data.js"></script>
     <script>
         (function() {
+            if (typeof MOKKASI_DATA === 'undefined') {
+                window.MOKKASI_DATA = { gifts: [{id:1,name:'프리미엄 한우 세트',desc:'등심+채끝+안심',price:298000,image:'https://images.unsplash.com/photo-1666013942642-b7b54ecafd7d?auto=format&fit=crop&w=800&q=80',tag:'명절 추천',detail:'프리미엄 구성입니다.'},{id:2,name:'스페셜 등심 세트',desc:'등심 600g x 2팩',price:178000,image:'https://images.unsplash.com/photo-1690983321239-775be3a0347d?auto=format&fit=crop&w=800&q=80',tag:'베스트',detail:'등심 세트입니다.'},{id:3,name:'VIP 종합 선물세트',desc:'전 부위 구성',price:498000,image:'https://images.unsplash.com/photo-1625643269470-5d3e7b69fa34?auto=format&fit=crop&w=800&q=80',tag:'VIP',detail:'최고급 선물세트입니다.'}] };
+            }
             const params = new URLSearchParams(location.search);
             const id = parseInt(params.get('id')) || 1;
             const gift = MOKKASI_DATA.gifts.find(g => g.id === id) || MOKKASI_DATA.gifts[0];
 
             const container = document.getElementById('gift-detail-container');
             container.innerHTML = `
+                <div class="detail-top-row">
                 <a href="index.html#gift" class="detail-back">← 선물세트 목록</a>
+                <button type="button" class="btn-share-link" title="링크 복사">링크 공유</button>
+            </div>
                 <div class="detail-grid">
                     <div class="detail-image-wrap">
                         <img src="${gift.image}" alt="${gift.name}">
@@ -88,12 +94,15 @@
                             <button type="button" class="btn-add-cart" data-id="${gift.id}" data-type="gift" data-name="${gift.name}" data-price="${gift.price}" data-image="${gift.image}">
                                 장바구니 담기
                             </button>
+                            <a href="https://pf.kakao.com/_mokkasi/chat" target="_blank" class="btn-kakao-inquire" rel="noopener">
+                                카톡으로 이 상품 문의하기
+                            </a>
                         </div>
                     </div>
                 </div>
             `;
 
-            document.title = `${gift.name} | 목까시한우`;
+            document.title = `${gift.name} | MOK'S BUTCHER`;
 
             const qtyInput = container.querySelector('#gift-qty');
             container.querySelectorAll('.qty-btn').forEach(btn => {
@@ -125,6 +134,14 @@
             });
 
             updateCartCount();
+
+            container.querySelector('.btn-share-link')?.addEventListener('click', function() {
+                const url = location.href;
+                navigator.clipboard?.writeText(url).then(() => {
+                    this.textContent = '복사됨!';
+                    setTimeout(() => { this.textContent = '링크 공유'; }, 1500);
+                }).catch(() => alert('링크: ' + url));
+            });
         })();
 
         function updateCartCount() {
@@ -134,5 +151,6 @@
         }
     </script>
     <script src="main.js"></script>
+    <script src="chat-widget.js"></script>
 </body>
 </html>
