--- a/product-detail.html
+++ b/product-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>상품 상세 | 목까시한우</title>
+    <title>상품 상세 | MOK'S BUTCHER</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;600;700;900&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
     <header class="header scrolled">
         <div class="header-inner">
-            <a href="index.html" class="logo"><span class="logo-text">목까시한우</span></a>
+            <a href="index.html" class="logo"><span class="logo-text">MOK'S BUTCHER</span></a>
             <nav class="nav">
                 <ul class="nav-list">
                     <li><a href="index.html#products">상품</a></li>
@@ -53,20 +53,26 @@
     <footer class="footer footer-compact">
         <div class="container">
             <p class="contact-number">1644-0000</p>
-            <p class="copyright">© 2024 목까시한우. All rights reserved.</p>
+            <p class="copyright">© 2026 MOK'S BUTCHER. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="data.js"></script>
     <script>
         (function() {
+            if (typeof MOKKASI_DATA === 'undefined') {
+                window.MOKKASI_DATA = { products: [{id:1,name:'1++ 한우 등심 (구이용)',desc:'부드러운 식감과 풍부한 마블링',price:89000,originalPrice:98000,weight:'300g',image:'https://images.unsplash.com/photo-1666013942642-b7b54ecafd7d?auto=format&fit=crop&w=800&q=80',badge:'BEST',detail:'1++ 등급 한우의 정수입니다.'},{id:2,name:'1++ 한우 채끝',desc:'쫄깃한 식감',price:79000,originalPrice:85000,weight:'300g',image:'https://images.unsplash.com/photo-1690983321239-775be3a0347d?auto=format&fit=crop&w=800&q=80',badge:'NEW',detail:'채끝 부위입니다.'},{id:3,name:'1++ 한우 안심',desc:'가장 부드러운 부위',price:125000,originalPrice:null,weight:'300g',image:'https://images.unsplash.com/photo-1613454320437-0c228c8b1723?auto=format&fit=crop&w=800&q=80',badge:null,detail:'안심 부위입니다.'},{id:4,name:'1++ 한우 꽃갈비',desc:'풍미 가득',price:99000,originalPrice:110000,weight:'600g',image:'https://images.unsplash.com/photo-1448907503123-67254d59ca4f?auto=format&fit=crop&w=800&q=80',badge:'10%',detail:'꽃갈비입니다.'}] };
+            }
             const params = new URLSearchParams(location.search);
             const id = parseInt(params.get('id')) || 1;
             const product = MOKKASI_DATA.products.find(p => p.id === id) || MOKKASI_DATA.products[0];
 
             const container = document.getElementById('product-detail-container');
             container.innerHTML = `
+                <div class="detail-top-row">
                 <a href="index.html#products" class="detail-back">← 상품 목록</a>
+                <button type="button" class="btn-share-link" title="링크 복사">링크 공유</button>
+            </div>
                 <div class="detail-grid">
                     <div class="detail-image-wrap">
                         <img src="${product.image}" alt="${product.name}">
@@ -90,12 +96,15 @@
                             <button type="button" class="btn-add-cart" data-id="${product.id}" data-type="product" data-name="${product.name}" data-price="${product.price}" data-image="${product.image}">
                                 장바구니 담기
                             </button>
+                            <a href="https://pf.kakao.com/_mokkasi/chat" target="_blank" class="btn-kakao-inquire" rel="noopener">
+                                카톡으로 이 상품 문의하기
+                            </a>
                         </div>
                     </div>
                 </div>
             `;
 
-            document.title = `${product.name} | 목까시한우`;
+            document.title = `${product.name} | MOK'S BUTCHER`;
 
             // Quantity
             const qtyInput = container.querySelector('#product-qty');
@@ -129,6 +138,15 @@
             });
 
             updateCartCount();
+
+            // 링크 공유
+            container.querySelector('.btn-share-link')?.addEventListener('click', function() {
+                const url = location.href;
+                navigator.clipboard?.writeText(url).then(() => {
+                    this.textContent = '복사됨!';
+                    setTimeout(() => { this.textContent = '링크 공유'; }, 1500);
+                }).catch(() => alert('링크: ' + url));
+            });
         })();
 
         function updateCartCount() {
@@ -138,5 +156,6 @@
         }
     </script>
     <script src="main.js"></script>
+    <script src="chat-widget.js"></script>
 </body>
 </html>
